# fluidgym

./: .buildinfo  .buildinfo.bak  .gitignore  .pre-commit-config.yaml  Dockerfile.devel  Dockerfile.runtime  LICENSE  Makefile  README.md  api.html  experiments.md  faq.html  genindex.html  glossary.html  index.html  initial_domain_generation.md  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: api.doctree  environment.pickle  glossary.doctree  index.doctree
.doctrees/advanced_usage/: custom_environments.doctree  parallelization.doctree
.doctrees/api/: airfoil.doctree  cylinder.doctree  cylinder_env.doctree  fluidenv.doctree  fluidgym.config.doctree  fluidgym.doctree  fluidgym.envs.airfoil.airfoil_env_2d.doctree  fluidgym.envs.airfoil.airfoil_env_3d.doctree  fluidgym.envs.airfoil.airfoil_env_base.doctree  fluidgym.envs.airfoil.doctree  fluidgym.envs.airfoil.grid.doctree  fluidgym.envs.cylinder.cylinder_env_base.doctree  fluidgym.envs.cylinder.doctree  fluidgym.envs.cylinder.grid.doctree  fluidgym.envs.cylinder.jet_cylinder_env_2d.doctree  fluidgym.envs.cylinder.jet_cylinder_env_3d.doctree  fluidgym.envs.cylinder.rotating_cylinder_env_2d.doctree  fluidgym.envs.doctree  fluidgym.envs.fluid_env.doctree  fluidgym.envs.multi_agent_fluid_env.doctree  fluidgym.envs.parallel_env.doctree  fluidgym.envs.rbc.doctree  fluidgym.envs.rbc.rbc_env_2d.doctree  fluidgym.envs.rbc.rbc_env_3d.doctree  fluidgym.envs.rbc.rbc_env_base.doctree  fluidgym.envs.tcf.doctree  fluidgym.envs.tcf.grid.doctree  fluidgym.envs.tcf.tcf_env.doctree  fluidgym.envs.util.doctree  (+40 more)
_modules/: index.html
_sources/: glossary.rst.txt
advanced_usage/: configuration.html  custom_environments.html  index.html  parallelization.html
api/: airfoil.html  cylinder.html  cylinder_env.html  fluidenv.html  fluidgym.config.html  fluidgym.envs.airfoil.airfoil_env_2d.html  fluidgym.envs.airfoil.airfoil_env_3d.html  fluidgym.envs.airfoil.airfoil_env_base.html  fluidgym.envs.airfoil.grid.html  fluidgym.envs.airfoil.html  fluidgym.envs.cylinder.cylinder_env_base.html  fluidgym.envs.cylinder.grid.html  fluidgym.envs.cylinder.html  fluidgym.envs.cylinder.jet_cylinder_env_2d.html  fluidgym.envs.cylinder.jet_cylinder_env_3d.html  fluidgym.envs.cylinder.rotating_cylinder_env_2d.html  fluidgym.envs.fluid_env.html  fluidgym.envs.html  fluidgym.envs.multi_agent_fluid_env.html  fluidgym.envs.parallel_env.html  fluidgym.envs.rbc.html  fluidgym.envs.rbc.rbc_env_2d.html  fluidgym.envs.rbc.rbc_env_3d.html  fluidgym.envs.rbc.rbc_env_base.html  fluidgym.envs.tcf.grid.html  fluidgym.envs.tcf.html  fluidgym.envs.tcf.tcf_env.html  fluidgym.envs.util.forces.html  fluidgym.envs.util.html  fluidgym.envs.util.obs_extraction.html  fluidgym.envs.util.profiles.html  fluidgym.envs.util.visualization.html  fluidgym.html  fluidgym.integration.gymnasium.html  fluidgym.integration.html  fluidgym.integration.pettingzoo.html  fluidgym.integration.sb3.eval_callback.html  fluidgym.integration.sb3.html  fluidgym.integration.sb3.multi_agent_vec_env.html  fluidgym.integration.sb3.parallel_vec_env.html  (+29 more)
basic_usage/: index.html  rendering.html
docs/: .buildinfo  Makefile  api.html  faq.html  genindex.html  glossary.html  index.html  installation.html  objects.inv  search.html  searchindex.js
examples/: parallel.py  rendering.py
(+433 files in other folders)
